Sat May 26 15:29:22 2012  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_backtrace.rb (test_caller_lev):
	  decreaze recursion size.

Sat May 26 13:50:48 2012  Koichi Sasada  <ko1@atdot.net>

	* NEWS: add Kernel#caller's second argument.

Sat May 26 13:40:29 2012  Koichi Sasada  <ko1@atdot.net>

	* vm.c (RubyVM::FrameInfo): add a class to access each frame
	  information.  You don't need to parse strings from caller().
	  FrameInfo has the following methods:
	    FrameInfo#name: method name, class name, etc with decorations.
	    FrameInfo#basename: name without decorations.
	    FrameInfo#line_no: line number.
	    FrameInfo#filename: file name.
	    FrameInfo#filepath: full filepath.
	    FrameInfo#iseq: iseq if it is iseq frame (defined by ruby script)
	    FrameInfo#to_s: return caller() method style string.
	  RubyVM::FrameInfo.caller(n, lev) returns array of FrameInfo objects.
	  The name "RubyVM::FrameInfo.caller" is long and ambiguous (it is
	  confusing with Kernel::caller() method), we need to change the name
	  before Ruby 2.0 release. Good names or comments are welcome.

	* test/ruby/test_backtrace.rb: add a test for above change.

Sat May 26 12:18:09 2012  Koichi Sasada  <ko1@atdot.net>

	* vm.c (frame_info_to_str): add `break'.

	* vm.c (backtrace_object): remove lev and n parameter.
	  backtrace_object always returns all of backtrace information.

	* vm.c (rb_backtrace_to_str_ary): fix to use backtrace_object().
	  This change improve performance of caller(lev, n).

	* benchmark/bm_vm3_backtrace.rb: added to check above improvement.
	  FYI: measurement on my laptop, 1.9.3p229 needs 5.125 sec, 
	  and current trunk only needs 0.299sec.

Sat May 26 11:05:09 2012  Koichi Sasada  <ko1@atdot.net>

	* vm.c (rb_frame_info_t): keep previous ISEQ frame info for CFUNC
	  frame info.  And fix to cache a calculated line_no of ISEQ frame
	  info.

Sat May 26 09:54:53 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>
