@@ -1,3 +1,8 @@
+Sat May 26 16:26:30 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (realpath_rec): UNC prefix does not end with path separator,
+	  so new separator is needed after it.
+
 Sat May 26 15:29:22 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* test/ruby/test_backtrace.rb (test_caller_lev):
